src/test/ui/disallowed-deconstructing/disallowed-deconstructing-destructing-struct-match.stderr
error[E0509]: cannot move out of type `X`, which implements the `Drop` trait
  --> $DIR/disallowed-deconstructing-destructing-struct-match.rs:14:11
   |
LL |     match x {
   |           ^ cannot move out of here
LL |
LL |         X { x: y } => println!("contents: {}", y)
   |                -
   |                |
   |                data moved here
   |                move occurs because `y` has type `std::string::String`, which does not implement the `Copy` trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0509`.
